@@ -32,6 +32,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Iterator
 import|;
 end_import
@@ -53,16 +63,6 @@ operator|.
 name|util
 operator|.
 name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
 import|;
 end_import
 
@@ -522,6 +522,81 @@ name|_fields
 operator|.
 name|values
 argument_list|()
+return|;
+block|}
+DECL|method|deepCopy
+specifier|public
+name|SolrInputDocument
+name|deepCopy
+parameter_list|()
+block|{
+name|SolrInputDocument
+name|clone
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|Set
+argument_list|<
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|SolrInputField
+argument_list|>
+argument_list|>
+name|entries
+init|=
+name|_fields
+operator|.
+name|entrySet
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|SolrInputField
+argument_list|>
+name|fieldEntry
+range|:
+name|entries
+control|)
+block|{
+name|clone
+operator|.
+name|_fields
+operator|.
+name|put
+argument_list|(
+name|fieldEntry
+operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|fieldEntry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|deepCopy
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|clone
+operator|.
+name|_documentBoost
+operator|=
+name|_documentBoost
+expr_stmt|;
+return|return
+name|clone
 return|;
 block|}
 comment|//---------------------------------------------------
