@@ -701,6 +701,94 @@ operator|+
 name|value
 return|;
 block|}
+DECL|method|deepCopy
+specifier|public
+name|SolrInputField
+name|deepCopy
+parameter_list|()
+block|{
+name|SolrInputField
+name|clone
+init|=
+operator|new
+name|SolrInputField
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+name|clone
+operator|.
+name|boost
+operator|=
+name|boost
+expr_stmt|;
+comment|// We can't clone here, so we rely on simple primitives
+if|if
+condition|(
+name|value
+operator|instanceof
+name|Collection
+condition|)
+block|{
+name|Collection
+argument_list|<
+name|Object
+argument_list|>
+name|values
+init|=
+operator|(
+name|Collection
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|value
+decl_stmt|;
+name|Collection
+argument_list|<
+name|Object
+argument_list|>
+name|cloneValues
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Object
+argument_list|>
+argument_list|(
+name|values
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|cloneValues
+operator|.
+name|addAll
+argument_list|(
+name|values
+argument_list|)
+expr_stmt|;
+name|clone
+operator|.
+name|value
+operator|=
+name|cloneValues
+expr_stmt|;
+block|}
+else|else
+block|{
+name|clone
+operator|.
+name|value
+operator|=
+name|value
+expr_stmt|;
+block|}
+return|return
+name|clone
+return|;
+block|}
 block|}
 end_class
 
